--- a/frontend/src/app/pages/home-page/home-page.component.html
+++ b/frontend/src/app/pages/home-page/home-page.component.html
@@ -1,1 +1,1 @@
-<h1 class="font-bold text-2xl md:text-3xl lg:text-4xl">Available workspaces</h1>
+<h1 class="text-2xl font-bold md:text-3xl lg:text-4xl">Available workspaces</h1>
