--- a/frontend/src/app/layout/header/header.component.css
+++ b/frontend/src/app/layout/header/header.component.css
@@ -3,7 +3,6 @@
 .link {
   position: relative;
   padding-block: 10px;
-  line-height: 1.2;
 }
 
 .link::after {
@@ -13,7 +12,7 @@
   bottom: 0;
   left: 0;
   opacity: 0;
-  background-color: #5c5af3;
+  background-color: var(--primary-color);
   width: 100%;
   height: 2px;
   content: '';
