--- a/frontend/src/app/pages/not-found-page/not-found-page.component.html
+++ b/frontend/src/app/pages/not-found-page/not-found-page.component.html
@@ -7,8 +7,8 @@
     </p>
     <div class="mt-10 flex items-center justify-center gap-x-6">
       <a
+        app-button
         routerLink="/"
-        class="rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-xs hover:bg-indigo-500 focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600"
       >
         Go back home
       </a>
