feat(frontend): workspace card

--- a/frontend/src/app/layout/header/header.component.html
+++ b/frontend/src/app/layout/header/header.component.html
@@ -1,4 +1,4 @@
-<header class="container mx-auto flex items-center justify-between px-2 py-5">
+<header class="container mx-auto flex items-center justify-between py-5">
   <a routerLink="/">
     <img
       class="w-42"
@@ -8,10 +8,9 @@
   </a>
   <nav class="flex gap-2 font-semibold sm:gap-4 md:gap-8 lg:gap-16">
     <a
-      routerLink="/"
+      routerLink="/workspaces"
       routerLinkActive="link_active"
       class="link"
-      [routerLinkActiveOptions]="{ exact: true }"
     >
       Workspaces
     </a>
