--- a/frontend/src/app/layout/layout.component.css
+++ b/frontend/src/app/layout/layout.component.css
@@ -5,9 +5,9 @@
 
   display: flex;
   flex-direction: column;
-  block-size: 100%;
+  min-block-size: 100%;
   overflow: clip;
-  color: #2d2d2d;
+  color: var(--text-color);
   font-size: 16px;
   line-height: 1.2;
 }
