--- a/frontend/src/app/layout/layout.component.html
+++ b/frontend/src/app/layout/layout.component.html
@@ -1,4 +1,4 @@
-<app-header class="bg-white" />
-<app-main class="grow bg-[#f7f6f9] pt-6 lg:pt-19">
+<app-header class="bg-white px-2" />
+<app-main class="grow bg-[#f7f6f9] px-2 pt-6 pb-20 lg:pt-19">
   <router-outlet />
 </app-main>
