--- a/frontend/src/app/pages/home-page/home-page.component.html
+++ b/frontend/src/app/pages/home-page/home-page.component.html
@@ -1,1 +1,16 @@
-<h1 class="text-2xl font-bold md:text-3xl lg:text-4xl">Available workspaces</h1>
+<h1 class="mb-11 text-2xl font-bold md:text-3xl lg:text-4xl">Available workspaces</h1>
+
+<div class="flex flex-col gap-6">
+  <app-workspace-card
+    type="Open space"
+    description="A vibrant shared area perfect for freelancers or small teams who enjoy a collaborative atmosphere. Choose any available desk and get to work with flexibility and ease."
+  />
+  <app-workspace-card
+    type="Private rooms"
+    description="Ideal for focused work, video calls, or small team huddles. These fully enclosed rooms offer privacy and come in a variety of sizes to fit your needs."
+  />
+  <app-workspace-card
+    type="Meeting rooms"
+    description="Designed for productive meetings, workshops, or client presentations. Equipped with screens, whiteboards, and comfortable seating to keep your sessions running smoothly."
+  />
+</div>
