--- a/frontend/src/app/pages/not-found-page/not-found-page.component.html
+++ b/frontend/src/app/pages/not-found-page/not-found-page.component.html
@@ -1,6 +1,6 @@
 <main class="grid place-items-center pt-10 pb-24 sm:pb-32">
   <div class="text-center">
-    <p class="text-base font-semibold text-indigo-600">404</p>
+    <p class="text-base font-semibold text-(--primary-color)">404</p>
     <h1 class="mt-4 text-5xl font-semibold tracking-tight text-balance text-gray-900 sm:text-7xl">Page not found</h1>
     <p class="mt-6 text-lg font-medium text-pretty text-gray-500 sm:text-xl/8">
       Sorry, we couldn’t find the page you’re looking for.
