--- a/frontend/src/app/pages/not-found-page/not-found-page.component.html
+++ b/frontend/src/app/pages/not-found-page/not-found-page.component.html
@@ -7,7 +7,7 @@
     </p>
     <div class="mt-10 flex items-center justify-center gap-x-6">
       <a
-        app-button
+        appButton
         routerLink="/"
       >
         Go back home
