--- a/frontend/src/app/pages/home-page/home-page.component.html
+++ b/frontend/src/app/pages/home-page/home-page.component.html
@@ -1,11 +1,14 @@
 <h1 class="mb-5 text-2xl font-bold sm:mb-11 md:text-3xl lg:text-4xl">Available workspaces</h1>
 
 <div class="flex flex-col gap-6">
-  @for (workspace of workspaces; track workspace.type) {
+  @for (workspace of workspaces(); track workspace.id) {
     <app-workspace-card
+      [amenities]="workspace.amenities"
       [description]="workspace.description"
-      [photos]="workspace.photos"
-      [type]="workspace.type"
+      [deskCount]="workspace.deskCount"
+      [name]="workspace.name"
+      [photos]="[]"
+      [rooms]="workspace.rooms"
     />
   }
 </div>
