feat: workspace photos

--- a/frontend/src/app/pages/home-page/home-page.component.html
+++ b/frontend/src/app/pages/home-page/home-page.component.html
@@ -7,7 +7,7 @@
       [description]="workspace.description"
       [deskCount]="workspace.deskCount"
       [name]="workspace.name"
-      [photos]="[]"
+      [photos]="workspace.photos"
       [rooms]="workspace.rooms"
     />
   }
