feat(frontend): page title

--- a/frontend/src/app/layout/layout.component.html
+++ b/frontend/src/app/layout/layout.component.html
@@ -1,4 +1,4 @@
 <app-header class="bg-white px-2" />
-<app-main class="grow bg-[#f7f6f9] px-2 pt-6 pb-6 sm:pb-20 lg:pt-19">
+<app-main class="grow bg-[#f7f6f9] px-2 pb-6 sm:pb-20">
   <router-outlet />
 </app-main>
