--- a/frontend/src/app/pages/home-page/home-page.component.html
+++ b/frontend/src/app/pages/home-page/home-page.component.html
@@ -1,4 +1,4 @@
-<h1 class="mb-5 text-2xl font-bold sm:mb-11 md:text-3xl lg:text-4xl">Available workspaces</h1>
+<app-page-title text="Available workspaces" />
 
 <div class="flex flex-col gap-6">
   @for (workspace of workspaces(); track workspace.id) {
