--- a/frontend/src/app/pages/home-page/workspace-card/workspace-card.component.html
+++ b/frontend/src/app/pages/home-page/workspace-card/workspace-card.component.html
@@ -29,7 +29,12 @@
       <h4 class="mb-3 text-[32px] font-semibold">{{ name() }}</h4>
       <p class="leading-[1.5] text-(--gray-color)">{{ description() }}</p>
     </div>
-    <a appButton>Book now</a>
+    <a
+      appButton
+      routerLink="/workspaces/book"
+    >
+      Book now
+    </a>
   </div>
   <div class="grid gap-x-4 gap-y-4 sm:gap-x-10 sm:gap-y-8 md:grid-cols-[13.25rem_1fr] lg:gap-x-32 xl:gap-x-50">
     @if (amenities()?.length) {
