fix(frontend): time-dropdown component

--- a/frontend/src/app/shared/components/dropdown/dropdown.component.html
+++ b/frontend/src/app/shared/components/dropdown/dropdown.component.html
@@ -34,7 +34,7 @@
     <li
       class="menu__item"
       role="menuitem"
-      [class.item_active]="option.value === value()"
+      [class.item_active]="compareWith(option.value, value())"
       (click)="onOptionClick(option)"
     >
       {{ option.label }}
