--- a/frontend/src/app/pages/booking-page/booking-page.component.html
+++ b/frontend/src/app/pages/booking-page/booking-page.component.html
@@ -8,97 +8,123 @@
   [formGroup]="form"
   (ngSubmit)="onSubmit()"
 >
-  <div class="section">
+  <div class="section section_details">
     <h3 class="section__title">Reservation details</h3>
 
-    <app-input
-      name="name"
-      formControlName="name"
-      label="Name"
-    />
+    <app-form-control>
+      <app-input
+        name="name"
+        formControlName="name"
+        label="Name"
+      />
+    </app-form-control>
 
-    <app-input
-      name="email"
-      formControlName="email"
-      label="Email"
-    />
+    <app-form-control>
+      <app-input
+        name="email"
+        formControlName="email"
+        label="Email"
+      />
+    </app-form-control>
 
-    <app-dropdown
-      name="workspaceType"
-      formControlName="workspaceTypeId"
-      label="Workspace type"
-      placeholder="Choose your workspace"
-      [options]="workspaceTypeOptions()"
-      (change)="onWorkspaceTypeIdChange($event)"
-    />
+    <app-form-control>
+      <app-dropdown
+        name="workspaceType"
+        formControlName="workspaceTypeId"
+        label="Workspace type"
+        placeholder="Choose your workspace"
+        [options]="workspaceTypeOptions()"
+        (change)="onWorkspaceTypeIdChange($event)"
+      />
+    </app-form-control>
 
     @if (roomCapacities()?.length) {
-      <app-checkbox-group
-        formControlName="roomSize"
-        label="What room size do you need?"
-        [single]="true"
-      >
-        @for (capacity of roomCapacities(); track capacity) {
-          <app-checkbox
-            name="roomCapacity-{{ $index }}"
-            [value]="capacity"
-          >
-            Room for
-            <span
-              class="font-semibold"
-              [ngPlural]="capacity"
+      <app-form-control errorClass="mt-3">
+        <app-checkbox-group
+          formControlName="roomSize"
+          label="What room size do you need?"
+          [single]="true"
+        >
+          @for (capacity of roomCapacities(); track capacity) {
+            <app-checkbox
+              name="roomCapacity-{{ $index }}"
+              [value]="capacity"
             >
-              <ng-template ngPluralCase="=1">1 person</ng-template>
-              <ng-template ngPluralCase="other">{{ capacity }} people</ng-template>
-            </span>
-          </app-checkbox>
-        }
-      </app-checkbox-group>
+              Room for
+              <span
+                class="font-semibold"
+                [ngPlural]="capacity"
+              >
+                <ng-template ngPluralCase="=1">1 person</ng-template>
+                <ng-template ngPluralCase="other">{{ capacity }} people</ng-template>
+              </span>
+            </app-checkbox>
+          }
+        </app-checkbox-group>
+      </app-form-control>
     }
 
     @if (deskCountOptions()?.length) {
-      <app-dropdown
-        name="deskCount"
-        formControlName="deskCount"
-        label="How many desks do you need?"
-        placeholder="Choose number of desks"
-        [options]="deskCountOptions()!"
-      />
+      <app-form-control>
+        <app-dropdown
+          name="deskCount"
+          formControlName="deskCount"
+          label="How many desks do you need?"
+          placeholder="Choose number of desks"
+          [options]="deskCountOptions()!"
+        />
+      </app-form-control>
     }
   </div>
 
-  <div class="section">
+  <div class="section section_datetime">
     <h3 class="section__title">Choose date and time</h3>
 
-    <ng-container formGroupName="date">
-      <app-date-picker
-        name="startDate"
-        formControlName="startDate"
-        label="Start date"
-      />
+    <app-form-control
+      class="datetime_group"
+      errorClass="font-semibold"
+      formGroupName="date"
+    >
+      <app-form-control>
+        <app-date-picker
+          name="startDate"
+          formControlName="startDate"
+          label="Start date"
+        />
+      </app-form-control>
 
-      <app-date-picker
-        name="endDate"
-        formControlName="endDate"
-        label="End date"
-      />
-    </ng-container>
+      <app-form-control>
+        <app-date-picker
+          name="endDate"
+          formControlName="endDate"
+          label="End date"
+        />
+      </app-form-control>
+    </app-form-control>
 
-    <ng-container formGroupName="time">
-      <app-time-dropdown
-        name="startTime"
-        formControlName="startTime"
-        label="Start time"
-        placeholder="Choose start time"
-      />
+    <app-form-control
+      class="datetime_group"
+      errorClass="font-semibold"
+      formGroupName="time"
+    >
+      <app-form-control>
+        <app-time-dropdown
+          name="startTime"
+          formControlName="startTime"
+          label="Start time"
+          placeholder="Choose start time"
+        />
+      </app-form-control>
 
-      <app-time-dropdown
-        name="endTime"
-        formControlName="endTime"
-        label="End time"
-        placeholder="Choose end time"
-      />
-    </ng-container>
+      <app-form-control>
+        <app-time-dropdown
+          name="endTime"
+          formControlName="endTime"
+          label="End time"
+          placeholder="Choose end time"
+        />
+      </app-form-control>
+    </app-form-control>
 
     <button
       appButton
