feat(frontend): add workspace type to query params

--- a/frontend/src/app/pages/home-page/workspace-card/workspace-card.component.html
+++ b/frontend/src/app/pages/home-page/workspace-card/workspace-card.component.html
@@ -32,6 +32,7 @@
     <a
       appButton
       routerLink="/workspaces/book"
+      [queryParams]="{ workspaceType: name() }"
     >
       Book now
     </a>
