migrate(frontend): from svg-icon component to icons font

--- a/frontend/src/app/features/page-title/page-title.component.html
+++ b/frontend/src/app/features/page-title/page-title.component.html
@@ -4,10 +4,10 @@
       class="my-5 inline-flex items-center gap-1 py-2 pe-4 font-semibold text-(--primary-color) hover:opacity-85"
       [routerLink]="backLink()"
     >
-      <svg
-        class="h-5 w-5"
-        icon="chevron-left"
-      ></svg>
+      <span
+        appIcon="chevron-left"
+        class="px-[7.5px] text-[10px]"
+      ></span>
       Go back
     </a>
   </div>
