--- a/frontend/src/app/shared/components/dropdown/dropdown.component.html
+++ b/frontend/src/app/shared/components/dropdown/dropdown.component.html
@@ -19,10 +19,10 @@
   } @else {
     <span class="placeholder">{{ placeholder() }}</span>
   }
-  <svg
+  <span
+    appIcon="chevron"
     class="icon"
-    icon="chevron"
-  ></svg>
+  ></span>
 </button>
 
 <ul
