--- a/frontend/src/app/pages/home-page/workspace-card/workspace-card.component.css
+++ b/frontend/src/app/pages/home-page/workspace-card/workspace-card.component.css
@@ -1,4 +1,7 @@
 .icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border-radius: 12px;
   background-color: #f5f3fb;
   padding: 10px;
