--- a/frontend/src/app/pages/home-page/workspace-card/workspace-card.component.html
+++ b/frontend/src/app/pages/home-page/workspace-card/workspace-card.component.html
@@ -43,12 +43,12 @@
         <div class="mb-3 text-[18px] font-semibold">Amenities</div>
         <div class="flex flex-wrap gap-3">
           @for (amenity of amenities(); track $index) {
-            <svg
-              *appAmenitySvgIcon="amenity; let icon = icon"
+            <span
+              *appAmenityIcon="amenity; let icon = icon"
               class="icon"
-              [icon]="icon"
+              [appIcon]="icon"
               [title]="amenity"
-            ></svg>
+            ></span>
           }
         </div>
       </div>
@@ -57,10 +57,10 @@
       <div>
         <div class="mb-3 text-[18px] font-semibold">Capacity options</div>
         <div class="flex flex-wrap items-center gap-4 text-[20px] font-medium">
-          <svg
+          <span
+            appIcon="user"
             class="icon"
-            icon="user"
-          ></svg>
+          ></span>
           {{ capacityRooms() }}
         </div>
       </div>
@@ -70,10 +70,10 @@
         <div class="text-[18px] leading-[1.2] font-semibold">Availability</div>
         @if (deskCount(); as deskCount) {
           <div class="flex flex-wrap items-center gap-4 text-[20px] font-medium">
-            <svg
+            <span
+              appIcon="armchair"
               class="icon"
-              icon="armchair"
-            ></svg>
+            ></span>
             <ng-container [ngPlural]="deskCount">
               <ng-template ngPluralCase="=1">1 desk</ng-template>
               <ng-template ngPluralCase="other">{{ deskCount }} desks</ng-template>
@@ -104,13 +104,9 @@
 
   <div class="rounded-lg bg-(--success-bg-200) px-2 py-2.5 sm:px-4">
     <span
-      class="float-left me-2 inline-flex h-6 w-6 items-center justify-center rounded-full bg-(--success-bg-500) text-white"
-    >
-      <svg
-        class="h-[10.8px] w-[10.8px]"
-        icon="check"
-      ></svg>
-    </span>
+      appIcon="check"
+      class="float-left me-2 inline-flex h-6 w-6 items-center justify-center rounded-full bg-(--success-bg-500) text-[6px] text-white"
+    ></span>
     <p class="leading-[1.5] text-black">
       This workspace is already booked by you! Room for 2 people
       <span class="font-semibold">May 18, 2025 to May 23, 2025</span>
