--- a/frontend/src/app/shared/components/checkbox/checkbox.component.css
+++ b/frontend/src/app/shared/components/checkbox/checkbox.component.css
@@ -5,7 +5,7 @@
 }
 
 :host label:first-child {
-  @apply relative flex cursor-pointer items-center select-none;
+  @apply relative flex cursor-pointer items-center justify-center select-none;
 }
 
 :host label:last-child {
@@ -33,6 +33,8 @@
 
 :host .icon {
   @apply absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 text-white opacity-0;
+
+  font-size: 7px;
 
   @variant peer-checked {
     @apply opacity-100;
