--- a/frontend/src/app/pages/home-page/workspace-card/workspace-card.component.html
+++ b/frontend/src/app/pages/home-page/workspace-card/workspace-card.component.html
@@ -1,7 +1,7 @@
 <div>
   <img
     class="mb-3 aspect-3/2 w-full rounded-xl object-cover sm:rounded-2xl"
-    [alt]="name()"
+    [alt]="workspace().name"
     [src]="activePhoto()"
   />
   @if (displayPhotos().length > 1) {
@@ -14,7 +14,7 @@
         >
           <img
             class="aspect-16/13 w-full rounded-lg object-cover"
-            [alt]="name()"
+            [alt]="workspace().name"
             [src]="photo"
           />
         </div>
@@ -26,23 +26,23 @@
 <div class="flex flex-col gap-4 sm:gap-8 sm:py-3">
   <div class="grid grid-cols-1 items-start gap-4 sm:grid-cols-[7fr_1.94fr] sm:gap-12">
     <div>
-      <h4 class="mb-3 text-[32px] font-semibold">{{ name() }}</h4>
-      <p class="leading-[1.5] text-(--gray-color)">{{ description() }}</p>
+      <h4 class="mb-3 text-[32px] font-semibold">{{ workspace().name }}</h4>
+      <p class="leading-[1.5] text-(--gray-color)">{{ workspace().description }}</p>
     </div>
     <a
       appButton
       routerLink="/workspaces/book"
-      [queryParams]="{ workspaceType: name() }"
+      [queryParams]="{ workspaceType: workspace().name }"
     >
       Book now
     </a>
   </div>
   <div class="grid gap-x-4 gap-y-4 sm:gap-x-10 sm:gap-y-8 md:grid-cols-[13.25rem_1fr] lg:gap-x-32 xl:gap-x-50">
-    @if (amenities()?.length) {
+    @if (workspace().amenities.length) {
       <div>
         <div class="mb-3 text-[18px] font-semibold">Amenities</div>
         <div class="flex flex-wrap gap-3">
-          @for (amenity of amenities(); track $index) {
+          @for (amenity of workspace().amenities; track $index) {
             <span
               *appAmenityIcon="amenity; let icon = icon"
               class="icon"
@@ -65,10 +65,10 @@
         </div>
       </div>
     }
-    @if (deskCount() || displayRooms()?.length) {
+    @if (workspace().deskCount || displayRooms().length) {
       <div class="flex flex-col gap-3">
         <div class="text-[18px] leading-[1.2] font-semibold">Availability</div>
-        @if (deskCount(); as deskCount) {
+        @if (workspace().deskCount; as deskCount) {
           <div class="flex flex-wrap items-center gap-4 text-[20px] font-medium">
             <span
               appIcon="armchair"
@@ -102,14 +102,30 @@
     }
   </div>
 
-  <div class="rounded-lg bg-(--success-bg-200) px-2 py-2.5 sm:px-4">
-    <span
-      appIcon="check"
-      class="float-left me-2 inline-flex h-6 w-6 items-center justify-center rounded-full bg-(--success-bg-500) text-[6px] text-white"
-    ></span>
-    <p class="leading-[1.5] text-black">
-      This workspace is already booked by you! Room for 2 people
-      <span class="font-semibold">May 18, 2025 to May 23, 2025</span>
-    </p>
-  </div>
+  @if (workspace().userBooking; as userBooking) {
+    <div class="rounded-lg bg-(--success-bg-200) px-2 py-2.5 sm:px-4">
+      <span
+        appIcon="check"
+        class="float-left me-2 inline-flex h-6 w-6 items-center justify-center rounded-full bg-(--success-bg-500) text-[6px] text-white"
+      ></span>
+      <p class="leading-[1.5] text-black">
+        This workspace is already booked by you!
+        @if (userBooking.deskCount; as deskCount) {
+          <ng-container [ngPlural]="deskCount">
+            <ng-template ngPluralCase="=1">1 desk</ng-template>
+            <ng-template ngPluralCase="other">{{ deskCount }} desks</ng-template>
+          </ng-container>
+        }
+        @if (userBooking.roomCapacity; as roomCapacity) {
+          <ng-container [ngPlural]="roomCapacity">
+            <ng-template ngPluralCase="=1">Room for 1 person</ng-template>
+            <ng-template ngPluralCase="other">Room for {{ roomCapacity }} people</ng-template>
+          </ng-container>
+        }
+        <span class="font-semibold">
+          {{ userBooking.startTime | date: 'longDate' }} to {{ userBooking.endTime | date: 'longDate' }}
+        </span>
+      </p>
+    </div>
+  }
 </div>
