feat: my bookings page

--- a/frontend/src/app/pages/booking-page/submit-error-modal/submit-error-modal.component.html
+++ b/frontend/src/app/pages/booking-page/submit-error-modal/submit-error-modal.component.html
@@ -10,7 +10,7 @@
     <button
       appButton
       class="w-full"
-      (click)="modal.close()"
+      (click)="modal.hide()"
     >
       Check availability
     </button>
