--- a/frontend/src/app/shared/components/modal/modal.component.html
+++ b/frontend/src/app/shared/components/modal/modal.component.html
@@ -14,7 +14,7 @@
           <button
             appIcon="x"
             type="button"
-            (click)="close()"
+            (click)="hide()"
           ></button>
         </div>
         <div class="modal-icon">
