--- a/frontend/src/styles/variables.css
+++ b/frontend/src/styles/variables.css
@@ -5,6 +5,8 @@
   --danger-color: #f56e6e;
   --gray-color: #6b6b6b;
 
+  --gray-color-100: #f5f3fb;
+
   --success-bg-200: #eaf7ee;
   --success-bg-500: #73c189;
 }
