--- a/frontend/src/app/pages/home-page/workspace-card/workspace-card.component.css
+++ b/frontend/src/app/pages/home-page/workspace-card/workspace-card.component.css
@@ -3,7 +3,7 @@
   justify-content: center;
   align-items: center;
   border-radius: 12px;
-  background-color: #f5f3fb;
+  background-color: var(--gray-color-100);
   padding: 10px;
   width: 44px;
   height: 44px;
