fix: booking DateTime

--- a/frontend/src/app/pages/booking-page/booking-page.component.html
+++ b/frontend/src/app/pages/booking-page/booking-page.component.html
@@ -11,9 +11,9 @@
 <app-submit-success-modal
   [deskCount]="submittedFormData()?.deskCount"
   [email]="submittedFormData()?.email"
-  [endDate]="submittedFormData()?.endTime"
+  [endDate]="submittedFormData()?.endDate"
   [roomCapacity]="submittedFormData()?.roomCapacity"
-  [startDate]="submittedFormData()?.startTime"
+  [startDate]="submittedFormData()?.startDate"
   [(visible)]="showSubmitSuccessModal"
 />
 
