--- a/frontend/src/app/pages/home-page/workspace-card/workspace-card.component.html
+++ b/frontend/src/app/pages/home-page/workspace-card/workspace-card.component.html
@@ -123,7 +123,11 @@
           </ng-container>
         }
         <span class="font-semibold">
-          {{ userBooking.startTime | date: 'longDate' }} to {{ userBooking.endTime | date: 'longDate' }}
+          @if (userBooking.startDate === userBooking.endDate) {
+            {{ userBooking.startDate | date: 'longDate' }}
+          } @else {
+            {{ userBooking.startDate | date: 'longDate' }} to {{ userBooking.endDate | date: 'longDate' }}
+          }
         </span>
       </p>
     </div>
