feat: booking-form component

--- a/frontend/src/app/features/booking-form/booking-form.component.html
+++ b/frontend/src/app/features/booking-form/booking-form.component.html
@@ -120,13 +120,8 @@
       </app-form-control>
     </app-form-control>
 
-    <button
-      appButton
-      class="w-full"
-      type="submit"
-      [disabled]="form.invalid"
-    >
-      Submit
-    </button>
+    @if (actions(); as actions) {
+      <ng-container *ngTemplateOutlet="actions" />
+    }
   </div>
 </form>
