--- a/frontend/src/app/shared/components/checkbox/checkbox.component.html
+++ b/frontend/src/app/shared/components/checkbox/checkbox.component.html
@@ -2,8 +2,8 @@
   <input
     class="peer checkbox"
     type="checkbox"
-    [checked]="isChecked"
-    [disabled]="isDisabled"
+    [checked]="isChecked()"
+    [disabled]="isDisabled()"
     [id]="name()"
     [name]="name()"
     [value]="value()"
